<resources>
    <string name="app_name">Дерзкий калькулятор</string>
    <string name="action_settings">Бесполезная,сука, кнопка</string>
    <string name="calcname">До тебя доебался Калькулятор, бро</string>
    <string name="calc">посчитай это дерьмо</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="check">Я не дибил, и не использую дробные числа в поле для ввода</string>
    <string name="probel">Удалить, всё к хуям!</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>
